--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,39 +1,24 @@
-<%- model_class = Area -%>
+<%- model_class = Exam -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:area_id) %>:</strong></dt>
+  <dd><%= @exam.area_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @area.name %></dd>
+  <dd><%= @exam.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:source) %>:</strong></dt>
+  <dd><%= @exam.source %></dd>
 </dl>
-
-<table class='table table-striped'>
-  <thead>
-    <th>id</th>
-    <th>area_id</th>
-    <th>name</th>
-    <th>source</th>
-  </thead>
-  <tbody>
-    <% @exams.each do |e| %>
-      <tr>
-        <td><%= e.id %></td>
-        <td><%= e.area_id %></td>
-        <td><%= e.name %></td>
-        <td><%= e.source %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              areas_path, :class => 'btn'  %>
+              exams_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_area_path(@area), :class => 'btn' %>
+              edit_exam_path(@exam), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              area_path(@area),
+              exam_path(@exam),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
