--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,32 +7,11 @@
     <title><%= content_for?(:title) ? yield(:title) : "Battle.net" %></title>
     <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
+    <%= render 'layouts/shim' %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
-    <!-- For third-generation iPad with high-resolution Retina display: -->
-    <!-- Size should be 144 x 144 pixels -->
-    <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-
-    <!-- For iPhone with high-resolution Retina display: -->
-    <!-- Size should be 114 x 114 pixels -->
-    <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-
-    <!-- For first- and second-generation iPad: -->
-    <!-- Size should be 72 x 72 pixels -->
-    <%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <!-- Size should be 57 x 57 pixels -->
-    <%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-
-    <!-- For all other devices -->
-    <!-- Size should be 32 x 32 pixels -->
-    <%= favicon_link_tag 'images/favicon.ico', :rel => 'shortcut icon' %>
+    <%= render 'layouts/favicon' %>
   </head>
   <body>
 
@@ -47,8 +26,8 @@
           <a class="brand" href="#">Battle.net</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "areas", "/path1"  %></li>
-              <li><%= link_to "exams", "/path2"  %></li>
+              <li><%= link_to "areas", areas_path  %></li>
+              <li><%= link_to "exams", exams_path  %></li>
               <li><%= link_to "questions", "/path3"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -62,8 +41,8 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
-              <li><%= link_to "areas", "/path1"  %></li>
-              <li><%= link_to "exams", "/path2"  %></li>
+              <li><%= link_to "areas", areas_path  %></li>
+              <li><%= link_to "exams", exams_path  %></li>
               <li><%= link_to "questions", "/path3"  %></li>
             </ul>
           </div><!--/.well -->
