--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span11">
+          <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div><!--/row-->
