--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="control-group">
     <%= f.label :xml, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :xml, :class => 'text_area' %>
+      <%= f.text_area :xml, :class => 'text_area span10' %>
     </div>
   </div>
 
