--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
@@ -36,7 +36,7 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span1">
+        <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
@@ -46,7 +46,7 @@
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span11">
+        <div class="span10">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
