--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,10 @@
           <a class="brand" href="#">Battle.net</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "areas", areas_path  %></li>
-              <li><%= link_to "exams", exams_path  %></li>
-              <li><%= link_to "questions", questions_path  %></li>
+              <li><%= link_to "Areas", areas_path  %></li>
+              <li><%= link_to "Exams", exams_path  %></li>
+              <li><%= link_to "Questions", questions_path  %></li>
+              <li><%= link_to "Pictures", pictures_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -40,9 +41,10 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
-              <li><%= link_to "areas", areas_path  %></li>
-              <li><%= link_to "exams", exams_path  %></li>
-              <li><%= link_to "questions", questions_path  %></li>
+              <li><%= link_to "Areas", areas_path  %></li>
+              <li><%= link_to "Exams", exams_path  %></li>
+              <li><%= link_to "Questions", questions_path  %></li>
+              <li><%= link_to "Pictures", pictures_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
