--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -6,9 +6,18 @@
     </div>
   </div>
 
-  <%= f.label :image, :class => 'control-label' %>
-  <div class='controls'>
-    <%= f.file_field :image %>
+  <div class="control-group">
+    <%= f.label :image, :class => 'control-label' %>
+    <div class='controls'>
+      <%= f.file_field :image %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label :base64, :class => 'control-label' %>
+    <div class='controls'>
+      <%= f.text_area :base64, :class => 'text_area span10' %>
+    </div>
   </div>
 
   <div class="form-actions">
