--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -6,7 +6,10 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @picture.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:pic) %>:</strong></dt>
   <dd><%= image_tag @picture.image_url.to_s %>
+  <dt><strong><%= model_class.human_attribute_name(:base64) %>:</strong></dt>
+  <dd><%= @picture.base64 %></dd>
 </dl>
 
 <div class="form-actions">
