--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
               <li><%= link_to "Exams", exams_path  %></li>
               <li><%= link_to "Questions", questions_path  %></li>
               <li><%= link_to "Pictures", pictures_path %></li>
+              <li><%= link_to "Narrations", narrations_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -45,6 +46,7 @@
               <li><%= link_to "Exams", exams_path  %></li>
               <li><%= link_to "Questions", questions_path  %></li>
               <li><%= link_to "Pictures", pictures_path %></li>
+              <li><%= link_to "Narrations", narrations_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
