--- a/app/views/narrations/index.html.erb
+++ b/app/views/narrations/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Picture -%>
+<%- model_class = Narration -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -7,23 +7,23 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:picture) %></th>
+      <th><%= model_class.human_attribute_name(:audio) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @pictures.each do |picture| %>
+    <% @narrations.each do |narration| %>
       <tr>
-        <td><%= link_to picture.id, picture_path(picture) %></td>
-        <td><%= picture.title %></td>
-        <td><%= image_tag picture.image_url.to_s %>
-        <td><%=l picture.created_at %></td>
+        <td><%= link_to narration.id, narration_path(narration) %></td>
+        <td><%= narration.title %></td>
+        <td><%= audio_tag narration.audio.url, :type => 'audio/mp3', :controls => 'controls', :id => 'player2' %>
+        <td><%=l narration.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_picture_path(picture), :class => 'btn btn-mini' %>
+                      edit_narration_path(narration), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      picture_path(picture),
+                      narration_path(narration),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -34,5 +34,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_picture_path,
+            new_narration_path,
             :class => 'btn btn-primary' %>
