--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -9,7 +9,7 @@
   <div class="control-group">
     <%= f.label :image, :class => 'control-label' %>
     <div class='controls'>
-      <%= f.file_field :image %>
+      <%= f.file_field :image, :class => 'file_field' %>
     </div>
   </div>
 
