--- a/app/views/narrations/_form.html.erb
+++ b/app/views/narrations/_form.html.erb
@@ -5,10 +5,18 @@
       <%= f.text_field :title, :class => 'text_field' %>
     </div>
   </div>
+
   <div class="control-group">
     <%= f.label :audio, :class => 'control-label' %>
     <div class="controls">
       <%= f.file_field :audio, :class => 'file_field' %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label :base64, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :base64, :class => 'text_area span10' %>
     </div>
   </div>
 
