--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -8,6 +8,7 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:title) %></th>
       <th><%= model_class.human_attribute_name(:picture) %></th>
+      <th><%= model_class.human_attribute_name(:url) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -17,7 +18,8 @@
       <tr>
         <td><%= link_to picture.id, picture_path(picture) %></td>
         <td><%= picture.title %></td>
-        <td><%= image_tag picture.image_url.to_s %>
+        <td><%= image_tag picture.image.url.to_s %></td>
+        <td><%= picture.image.url %></td>
         <td><%=l picture.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
