--- a/app/views/exams/show.json.erb
+++ b/app/views/exams/show.json.erb
@@ -1,19 +1,15 @@
-<% json_hash = Hash.new %>
 <% json_a = Array.new %>
-<% question_a = Array.new %>
 
 <% @questions.each do |q| %>
   <% q_hash = Hash.new %>
   <% q_hash[:number] = q.number %>
-  <% q_hash[:group_number] = q.group_number %>
-  <% q_hash[:point] = 1 %>
+  <% q_hash[:point] = q.question_point %>
+  <% q_hash[:is_question] = q.is_question %>
   <% q_hash[:sentence] = q.question_sentence %>
   <% q_hash[:message] = q.question_message %>
   <% q_hash[:selection] = q.question_selection %>
   <% q_hash[:answer] = q.question_answer %>
-  <% question_a = Array.new %>
-  <% question_a << q_hash %>
-  <% json_a << question_a %>
+  <% json_a << q_hash %>
 <% end %>
 
 <%= json_a.to_json.html_safe %>
