Add results table.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
               <li><%= link_to "Questions", questions_path  %></li>
               <li><%= link_to "Pictures", pictures_path %></li>
               <li><%= link_to "Narrations", narrations_path %></li>
+              <li><%= link_to "Results", results_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -47,6 +48,7 @@
               <li><%= link_to "Questions", questions_path  %></li>
               <li><%= link_to "Pictures", pictures_path %></li>
               <li><%= link_to "Narrations", narrations_path %></li>
+              <li><%= link_to "Results", results_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
