--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -10,6 +10,8 @@
   <dd><%= @exam.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:source) %>:</strong></dt>
   <dd><%= @exam.source %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:time) %>:</strong></dt>
+  <dd><%= @exam.time %></dd>
 </dl>
 
 <div class="form-actions">
