--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -17,6 +17,12 @@
       <%= f.text_field :source, :class => 'text_field' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :time, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :time, :class => 'number_field' %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
