--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -9,6 +9,7 @@
       <th><%= model_class.human_attribute_name(:area_id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:source) %></th>
+      <th><%= model_class.human_attribute_name(:time) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -20,6 +21,7 @@
         <td><%= exam.area_id %></td>
         <td><%= exam.name %></td>
         <td><%= exam.source %></td>
+        <td><%= exam.time %></td>
         <td><%=l exam.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
