--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @result, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
-    <%= f.label :user_id, :class => 'control-label' %>
+    <%= f.label :user_id_str, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :user_id, :class => 'number_field' %>
+      <%= f.text_field :user_id_str, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -12,9 +12,27 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :score, :class => 'control-label' %>
+    <%= f.label :question_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :score, :class => 'number_field' %>
+      <%= f.number_field :question_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :user_selection, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :user_selection, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :answer, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :answer, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :used_time, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :used_time, :class => 'text_field' %>
     </div>
   </div>
 
