--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -6,9 +6,12 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:user_id_str) %></th>
       <th><%= model_class.human_attribute_name(:exam_id) %></th>
-      <th><%= model_class.human_attribute_name(:score) %></th>
+      <th><%= model_class.human_attribute_name(:question_id) %></th>
+      <th><%= model_class.human_attribute_name(:user_selection) %></th>
+      <th><%= model_class.human_attribute_name(:answer) %></th>
+      <th><%= model_class.human_attribute_name(:used_time) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -17,9 +20,12 @@
     <% @results.each do |result| %>
       <tr>
         <td><%= link_to result.id, result_path(result) %></td>
-        <td><%= result.user_id %></td>
+        <td><%= result.user_id_str %></td>
         <td><%= result.exam_id %></td>
-        <td><%= result.score %></td>
+        <td><%= result.question_id %></td>
+        <td><%= result.user_selection %></td>
+        <td><%= result.answer %></td>
+        <td><%= result.used_time %></td>
         <td><%=l result.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -37,7 +43,7 @@
 <pre>
 To create a new record through JSON,
 i.e.
-curl -v -H "Accept: application/json" -H "Content-type: application/json" -X POST -d '{"exam_id":1,"score":100,"user_id":1}'  http://localhost:3000/results
+curl -v -H "Accept: application/json" -H "Content-type: application/json" -X POST -d '{"exam_id":1,"user_id_str":"GILDONG","question_id":1,"user_selection":1,"answer":1,"used_time":5.2 }'  http://localhost:3000/results
 </pre>
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_result_path,
