--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -18,6 +18,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :css_url, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :css_url, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :time, :class => 'control-label' %>
     <div class="controls">
       <%= f.number_field :time, :class => 'number_field' %>
