--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,26 +1,26 @@
 div { 
-  divfont-family:Arial,Helvetica,sans-serif; 
-  divpadding: 0px; 
-  divmargin-left:10px; 
-  divmargin-right:10px; 
-  divmargin-top:40px; 
-  divtext-align: left; 
-  divlist-style-type:upper-roman;
+  font-family:Arial,Helvetica,sans-serif; 
+  padding: 0px; 
+  margin-left:10px; 
+  margin-right:10px; 
+  margin-top:40px; 
+  text-align: left; 
+  list-style-type:upper-roman;
 }
 h3 {
-  divmargin-left:0px; 
-  divmargin-right:0px; 
+  margin-left:0px; 
+  margin-right:0px; 
 }
 ol {
-  divlist-style-type:upper-alpha;
+  list-style-type:upper-alpha;
 }
 audio {
-  divwidth:100%;
+  width:100%;
 }
 sel {
-  divfont-weight:600;
+  font-weight:600;
 }
 
 img {
-  divwidth:100%;
+  width:100%;
 }
