--- a/public/css/css.css
+++ b/public/css/css.css
@@ -28,3 +28,7 @@ img {
 a:link { color: #000000; text-decoration: none }
 a:active { color: #000000; text-decoration: none }
 a:visited { color: #000000; text-decoration: none }
+
+.fastclick { background-color: #FFFFFF; }
+.fastclicked { background-color: #C8C8C8; }
+
