--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,6 +10,8 @@
   <dd><%= @question.group_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:number) %>:</strong></dt>
   <dd><%= @question.number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:num_selection) %>:</strong></dt>
+  <dd><%= @question.num_selection %></dd>
   <dt><strong><%= model_class.human_attribute_name(:xml) %>:</strong></dt>
   <dd><%= @question.xml %></dd>
 </dl>
