--- a/public/css/css.css
+++ b/public/css/css.css
@@ -6,29 +6,80 @@ div {
   margin-top:40px; 
   text-align: left; 
   list-style-type:upper-roman;
+  -webkit-touch-callout: none;
 }
+
+a:link {text-decoration:none;color:#000000;}
+a:visited {text-decoration:none;color:#000000;}
+a:hover {text-decoration:none;color:#000000;}
+a:active {text-decoration:none;color:#000000;}
+
 h3 {
   margin-left:0px; 
   margin-right:0px; 
+  text-align: right; 
 }
-ol {
-  list-style-type:upper-alpha;
+
+h4 {
+  margin-left:0px; 
+  margin-right:0px; 
+  text-align: right; 
 }
+
 audio {
+  margin-left:0px; 
   width:100%;
+  height:20px;
+  text-align: right; 
 }
+
 sel {
-  font-weight:600;
+
 }
 
 img {
   width:100%;
 }
 
-a:link { color: #000000; text-decoration: none }
-a:active { color: #000000; text-decoration: none }
-a:visited { color: #000000; text-decoration: none }
+li.fastclicked {
+	list-style-position:inside;
+	list-style-type:upper-alpha;
+	text-align: justified; 
+	margin-left:-2em;
+	padding-left:1em;
+	text-indent:0em;
+}
 
-.fastclick { background-color: #FFFFFF; }
-.fastclicked { background-color: #C8C8C8; }
+li.fastclick {
+  list-style-position:outside;
+  list-style-type:upper-alpha;
+  text-align: justified; 
+}
 
+td.fastclicked {
+	border-radius:10px;
+	padding-top:5px;
+	padding-left:10px;
+	padding-right:10px;
+	padding-bottom:10px;
+	margin:0px;
+}
+
+sel.fastclicked {
+	padding:15px;
+	display:block;
+	border-radius:10px;
+}
+
+.fastclick {
+	color:#000000;
+}
+
+.fastclicked {
+	background-color:#000000;
+	color:#ffffff;
+	padding: 5px;
+	margin: 5px;
+	text-height: 25px;
+	border-radius:10px;
+}
