--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,6 +10,8 @@
       <th><%= model_class.human_attribute_name(:group_number) %></th>
       <th><%= model_class.human_attribute_name(:number) %></th>
       <th><%= model_class.human_attribute_name(:num_selection) %></th>
+      <th><%= model_class.human_attribute_name(:difficulty) %></th>
+      <th><%= model_class.human_attribute_name(:sample_size) %></th>
       <th><%= model_class.human_attribute_name(:xml) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -23,6 +25,8 @@
         <td><%= question.group_number %></td>
         <td><%= question.number %></td>
         <td><%= question.num_selection %></td>
+        <td><%= question.difficulty %></td>
+        <td><%= question.sample_size %></td>
         <td><%= question.xml %></td>
         <td><%=l question.created_at %></td>
         <td>
