--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,8 +10,15 @@
       <th><%= model_class.human_attribute_name(:group_number) %></th>
       <th><%= model_class.human_attribute_name(:number) %></th>
       <th><%= model_class.human_attribute_name(:num_selection) %></th>
-      <th><%= model_class.human_attribute_name(:difficulty) %></th>
-      <th><%= model_class.human_attribute_name(:sample_size) %></th>
+      <th>
+        <%= model_class.human_attribute_name(:difficulty) %>
+      </th>
+      <th>
+        <%= button_to 'Re-calc', recalc_path,
+        :method => 'get',
+        :class => 'btn btn-mini btn-info' %>
+        <%= model_class.human_attribute_name(:sample_size) %>
+      </th>
       <th><%= model_class.human_attribute_name(:xml) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
