--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,7 @@
           <a class="brand" href="#">Battle.net</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Areas", areas_path  %></li>
-              <li><%= link_to "Exams", exams_path  %></li>
-              <li><%= link_to "Questions", questions_path  %></li>
-              <li><%= link_to "Pictures", pictures_path %></li>
-              <li><%= link_to "Narrations", narrations_path %></li>
-              <li><%= link_to "Results", results_path %></li>
+              <li><%= link_to "Analytics", "#" %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
