--- a/app/views/exams/show.json.erb
+++ b/app/views/exams/show.json.erb
@@ -5,6 +5,7 @@
   <% q_hash[:id] = q.id %>
   <% q_hash[:number] = q.number %>
   <% q_hash[:num_selection] = q.num_selection %>
+  <% q_hash[:difficulty] = q.difficulty %>
   <% if q.group_number %>
     <% q_hash[:group_number] = q.group_number %>
   <% else %>
